--- a/index.html
+++ b/index.html
@@ -1,60 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tailwind CSS Input with Tooltip</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <style>
-        /* Tooltip container */
-        .tooltip {
-            position: relative;
-            display: inline-block;
+<html>
+  <head>
+    <title>No Spaces Input</title>
+    <script>
+      function noSpaces(event) {
+        if (event.which === 32 || event.keyCode === 32) {
+          event.preventDefault();
         }
+      }
 
-        /* Tooltip text */
-        .tooltip .tooltip-text {
-            visibility: hidden;
-            width: 160px;
-            background-color: #555;
-            color: #fff;
-            text-align: center;
-            border-radius: 6px;
-            padding: 8px;
-            position: absolute;
-            z-index: 1;
-            bottom: 125%; /* Position the tooltip above the text */
-            left: 50%;
-            margin-left: -80px; /* Use half of the width (120/2 = 60), to center it */
-            opacity: 0;
-            transition: opacity 0.3s;
+      function validateNoSpaces(input) {
+        if (/\s/.test(input.value)) {
+          input.setCustomValidity("No spaces allowed");
+        } else {
+          input.setCustomValidity("");
         }
-
-        /* Tooltip arrow */
-        .tooltip .tooltip-text::after {
-            content: "";
-            position: absolute;
-            top: 100%; /* At the bottom of the tooltip */
-            left: 50%;
-            margin-left: -5px;
-            border-width: 5px;
-            border-style: solid;
-            border-color: #555 transparent transparent transparent;
-        }
-
-        /* Show the tooltip text when you mouse over the tooltip container */
-        .tooltip:hover .tooltip-text {
-            visibility: visible;
-            opacity: 1;
-        }
-    </style>
-</head>
-<body class="flex items-center justify-center h-screen bg-gray-100">
-
-    <div class="tooltip">
-
-        <span class="tooltip-text">No spaces allowed</span>
-    </div>
-
-</body>
+      }
+    </script>
+  </head>
+  <body>
+    <form>
+      <label for="username">Username (no spaces allowed):</label>
+      <input
+        type="text"
+        id="username"
+        name="username"
+        onkeydown="noSpaces(event)"
+        required />
+      <input type="submit" value="Submit" />
+    </form>
+  </body>
 </html>
